--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta namet="viewport" content="width=device-width, initial-scale=1.0">
-    <title>página principal</title>
-    <link rel="stylesheet" href="css/estilo.css"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página Principal</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
-    <h1>Aprendendo sobre Github</h1>
+<body>  
+    <table>
+        <tr>
+            <td class="caixa">
+                <h2>Aprendendo sobre GitHub</h2>
+                <p>Qual é a utilidade de trabalhar com GitHub dentro do VSCode?</p>
+                <p>Resposta: usar o GitHub no VS Code é tipo ter um pendrive online pro teu código. 
+                Tu consegue salvar na nuvem, voltar atrás se fizer cagada e ainda dividir com outras pessoas,
+                tudo sem sair do próprio VS Code.</p>
+                <p>Acesso aos exercícios:</p>
+            </td>
+        </tr>
+        <tr>
+            <td class="links">
+                <a href="../meusitemanu/paginas/universomarvel.html">Atividade da MARVEL</a> | 
+                <a href="../meusitemanu/paginas/netflix.html">Atividade da NETFLIX</a>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
